# map-reduce

./: Barrier.cpp  CMakeLists.txt  Makefile  MapReduceFramework.cpp  README  SampleClient.cpp  barrierdemo.cpp  contexts.cpp  contexts.h  main.cpp
mattanTests/: CMakeLists.txt  CMakeLists.txt.in  SampleClient.cpp
